--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.1",
+    "framer-motion": "^11.11.15",
     "lucide-react": "^0.456.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
