--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "framer-motion": "^11.11.15",
     "lucide-react": "^0.456.0",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
